Agregando chat compartido y modificando estilos